New version of Assignment6 F